--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 Werkzeug==3.1.3
-sqlalchemy
-cryptography
-PyPDF2
-python-dotenv  # Si usas .env para variables
-Werkzeug
-PyJWT         # Si utilizas JWT para autenticación
+SQLAlchemy==2.0.41
+cryptography==45.0.3
+PyPDF2==3.0.1
+python-dotenv==1.1.0
+PyJWT==2.10.1
+flask-cors==4.0.0
+pymysql==1.1.0
+requests==2.31.0
