--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,15 +35,16 @@ http {
         client_max_body_size 10M;
         client_body_timeout 10s;
 
-        location / {
-    
-            
-            # 🔁 Reenvío hacia tu backend Flask
-            proxy_pass http://host.docker.internal:5000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+     location / {
+    proxy_pass http://host.docker.internal:5000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # ✅ Añadir esta línea para que Authorization pase al backend:
+    proxy_set_header Authorization $http_authorization;
+}
+
     }
 }
